# eli-tools

./: .gitignore  CHANGELOG.md  CODEMAP.md  README.md  pyproject.toml
src/eli_tools/: __init__.py  file_transforms.py  fs.py  log_utils.py  pdf_transforms.py  text_utils.py
tests/: test_fs_get_one_path.py
